moodle-backup-20250716_200033.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"moodle"},"name":"moodle","namespace":"moodle"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"moodle"}},"template":{"metadata":{"labels":{"app":"moodle"}},"spec":{"containers":[{"env":[{"name":"MOODLE_DATABASE_HOST","value":"mysql"},{"name":"MOODLE_DATABASE_PORT_NUMBER","value":"3306"},{"name":"MOODLE_DATABASE_NAME","value":"moodle"},{"name":"MOODLE_DATABASE_USER","value":"moodle"},{"name":"MO [...]
  creationTimestamp: "2025-07-16T22:49:40Z"
  generation: 4
  labels:
    app: moodle
  name: moodle
  namespace: moodle
  resourceVersion: "1752717084021279008"
  uid: 5c53d2b3-c042-4b22-9e4e-67e5ccb4d3f4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: moodle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle
    spec:
      containers:
      - env:
        - name: MOODLE_DATABASE_HOST
          value: mysql
        - name: MOODLE_DATABASE_PORT_NUMBER
          value: "3306"
        - name: MOODLE_DATABASE_NAME
          value: moodle
        - name: MOODLE_DATABASE_USER
          value: moodle
        - name: MOODLE_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mysql-password
              name: mysql-secret
        - name: MOODLE_USERNAME
          value: admin
        - name: MOODLE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: moodle-password
              name: moodle-secret
        - name: MOODLE_EMAIL
          value: admin@moodle.local
        - name: MOODLE_SITE_NAME
          value: Mi Campus Virtual
        - name: MOODLE_SKIP_BOOTSTRAP
          value: "no"
        - name: MOODLE_DATABASE_TYPE
          value: mysqli
        - name: MOODLE_ENABLE_HTTPS
          value: "no"
        - name: MOODLE_ENABLE_EMPTY_PASSWORD
          value: "no"
        - name: MOODLE_ENABLE_DATABASE_SSL
          value: "no"
        image: bitnami/moodle:5.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: moodle
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /bitnami/moodle
          name: moodle-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: moodle-data
        persistentVolumeClaim:
          claimName: moodle-data-pvc
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-07-16T23:18:20Z"
    lastUpdateTime: "2025-07-16T23:18:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-07-17T01:51:24Z"
    lastUpdateTime: "2025-07-17T01:51:24Z"
    message: ReplicaSet "moodle-6d984f7798" has timed out progressing.
    reason: ProgressDeadlineExceeded
    status: "False"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
