service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-service
  namespace: moodle
spec:
  selector:
    app: moodle-complete
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
    name: http
  - protocol: TCP
    port: 443
    targetPort: 8443
    nodePort: 30443
    name: https
  type: NodePort
  sessionAffinity: None
